--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Historia{% endblock %}
+{% block title %}Semana 1{% endblock %}
 
 {% block content %}
     <section class="page-section about-heading">
