--- a/core/templates/core/services.html
+++ b/core/templates/core/services.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Servicios{% endblock %}
+{% block title %}Semana 2{% endblock %}
 
 {% block content %}
 <section class="page-section">
