--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Contacto{% endblock %}
+{% block title %}Semana 3{% endblock %}
 
 {% block content %}
 <section class="page-section about-heading">
