--- a/core/templates/core/sample.html
+++ b/core/templates/core/sample.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Inicio{% endblock %}
+{% block title %}Metas{% endblock %}
 
 {% block content %}
 <section class="page-section about-heading">
